@@ -1,5 +1,13 @@
 2018-02-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/dcm.c (DCM_PostRescaleImage): Remove use of
+	DCM_PostRescaleImage() since its implementation is wrong and
+	accesses non-allocated heap memory.  Problem was reported by Petr
+	Gajdos via email on February 8, 2018.
+
+	* coders/jp2.c (ReadJP2Image): Use a ThrowJP2ReaderException macro
+	to automatically clean up when throwing an exception.
+
 	* coders/bmp.c (ReadBMPImage): Report an error if RLE decode does
 	not produce the expected number of bytes.  Fixes oss-fuzz issue
 	6015 "graphicsmagick/coder_BMP_fuzzer: Out-of-memory in
